; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_date.c_Date_getMinutes.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_date.c_Date_getMinutes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@JS_E_DATE_EXPECTED = common dso_local global i32 0, align 4
@S_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, i32, i32*, i32*)* @Date_getMinutes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Date_getMinutes(i32* %0, i32* %1, i32 %2, i32 %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  %15 = call i32 @TRACE(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %16 = load i32*, i32** %9, align 8
  %17 = call %struct.TYPE_4__* @date_this(i32* %16)
  store %struct.TYPE_4__* %17, %struct.TYPE_4__** %14, align 8
  %18 = icmp ne %struct.TYPE_4__* %17, null
  br i1 %18, label %23, label %19

19:                                               ; preds = %6
  %20 = load i32*, i32** %8, align 8
  %21 = load i32, i32* @JS_E_DATE_EXPECTED, align 4
  %22 = call i32 @throw_type_error(i32* %20, i32 %21, i32* null)
  store i32 %22, i32* %7, align 4
  br label %37

23:                                               ; preds = %6
  %24 = load i32*, i32** %13, align 8
  %25 = icmp ne i32* %24, null
  br i1 %25, label %26, label %35

26:                                               ; preds = %23
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %31 = call i32 @local_time(i32 %29, %struct.TYPE_4__* %30)
  %32 = call i32 @min_from_time(i32 %31)
  %33 = call i32 @jsval_number(i32 %32)
  %34 = load i32*, i32** %13, align 8
  store i32 %33, i32* %34, align 4
  br label %35

35:                                               ; preds = %26, %23
  %36 = load i32, i32* @S_OK, align 4
  store i32 %36, i32* %7, align 4
  br label %37

37:                                               ; preds = %35, %19
  %38 = load i32, i32* %7, align 4
  ret i32 %38
}

declare dso_local i32 @TRACE(i8*) #1

declare dso_local %struct.TYPE_4__* @date_this(i32*) #1

declare dso_local i32 @throw_type_error(i32*, i32, i32*) #1

declare dso_local i32 @jsval_number(i32) #1

declare dso_local i32 @min_from_time(i32) #1

declare dso_local i32 @local_time(i32, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
